syntax = "proto3"; 

package shop;
option go_package = "github.com/proelbtn/school-eve-navi/gateway/protos/shop";

message ShopGenre {
    uint64 id = 1;
    string name = 2;
}

message ShopRecord {
    int64 id = 1;
    ShopData data = 2;
}

message ShopData {
    string name = 1;
    uint64 price = 2;
    uint64 genre_id = 3;
}

message ShopCreateQuery {
    ShopData data = 1;
}

message ShopCreateResult {
    bool success = 1;
}

message ShopDeleteQuery {
    uint64 id = 1;
}

message ShopDeleteResult {
    bool success = 1;
}

message ShopGetQuery {
    uint64 id = 1;
}

message ShopGetResult {
    ShopRecord record = 1;
}

message ShopSearchQuery {
    string name = 1;
    double latitude = 2;
    double longitude = 3;
    uint64 genre = 4;
}

message ShopSearchResult {
    repeated ShopRecord records = 1;
}

message ShopEmptyQuery {}

message ShopGetGenresResult {
    repeated ShopGenre genres = 1;
}